front/src/scenes/Dashboard/components/EvidenceImage/index.css
:local .imgContainer {
  padding: 15px 20px 20px;
  background-color: #FFFFFF;
  margin-bottom: 30px;
  box-shadow: none;
  border-width: 0;
}

:local .img {
  cursor: pointer;
  text-align: center;
  font-size: 150px;
  width: 600px;
  height: 600px;
  max-width: 100%;
  max-height: 250px;
  padding: 4px;
  line-height: 1.42857143;
  background-color: #F0F0F0;
  border: 1px solid #DDDDDD;
  border-radius: 0;
  -webkit-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: inline-block;
  vertical-align: middle;
}

@media (min-width: 768px) and (max-width: 1199px) {
  .img {
    height: 200px !important;
  }
}
@media (min-width: 1200px) {
  .img {
    height: 250px !important;
  }
}

:local .description {
  padding: 20px 20px 15px;
  border-top: 1px solid #DDDDDD;
}

